apps/homelab/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: tcp
      port: 80
      targetPort: 80
  type: ClusterIp
